# aframe

./: .gitmodules
aframe/pipelines/sandbox/: sandbox.cfg
aframe/tasks/infer/: base.py
charts/raycluster/: values.yaml
libs/architectures/architectures/: __init__.py  supervised.py
libs/architectures/architectures/networks/: __init__.py  dense.py  state_space.py  transformer.py
libs/architectures/architectures/networks/sashimi/: s4.py  sashimi.py
libs/p_astro/: pyproject.toml
libs/p_astro/p_astro/: p_astro.py
projects/infer/: apptainer.def  pyproject.toml
projects/infer/infer/: data.py  main.py
projects/plots/plots/vetos/: vetos.py
projects/plots/plots/vizapp/: app.py  data.py
projects/train/: Untitled-1.ipynb  config.yaml  pyproject.toml
projects/train/train/: cli.py
projects/train/train/architectures/: supervised.py
projects/train/train/data/: base.py
projects/train/train/data/supervised/: supervised.py
projects/train/train/model/: base.py  supervised.py
projects/train/train/tune/: search_space.py
